add makeMove for Predator add first version startSimulation add ClearScreen for Windows PowerShell